# float2rgba

./: Cargo.toml  README.md  build.sh  doc-web.sh  float2rgba.wasm  jfmt.sh  test.sh
sample.d/: float2rgba.wasm  index.css  index.html  index.js
src/: canvas.rs  ext_colorgrad.rs  lib.rs  normalize.rs  simple.rs
src/canvas/imgdat/: ext.rs
src/ext_colorgrad/: rainbow.rs  turbo.rs  wasm.rs
src/simple/: f32gray.rs  f32red.rs
