[package]
name = "float2rgba"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
  "cdylib",
]

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.colorgrad]
version = "0.6.2"
optional = true
default-features = false
features = []

[features]
defaults = [
]

simple = []

simple_red = []
simple_gray = []

simple_red_wasm = []
simple_gray_wasm = []

ext_colorgrad = ["colorgrad"]
ext_colorgrad_wasm = []

ext_colorgrad_turbo_wasm = []
ext_colorgrad_rainbow_wasm = []

canvas = []
